--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+    <form name="comments-queue" netlify-honeypot="full-name" action="/thanks" netlify hidden>
+    </form>
     <div id="root">
       
     </div>
