--- a/public/index.html
+++ b/public/index.html
@@ -51,27 +51,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <form name="comments-queue" netlify-honeypot="full-name" action="/thanks" netlify hidden>
-      <p class="honey">
-        <input name="path" value="{{ page.url }}" />
-        <label>Your full name: <input name="full-name"/></label>
-      </p>
-        <p>
-          <label for="name">Your name<small>What should I call you?</small></label>
-          <input type="text" name="name" id="name" />
-        </p>
-        <p>
-          <label for="email">Your email<small>I'll never spam you. I promise.</small></label>
-          <input type="email" name="email" id="email" />
-        </p>
-        <p>
-          <label for="comment">Your comment<small>Markdown is fine.</small></label>
-          <textarea name="comment" id="comment"></textarea>
-        </p>
-        <p>
-          <button type="submit" class="btn">Post your comment</button>
-        </p>
-  </form>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
     <div id="root">
       
     </div>
