--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,57 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <textarea name="message"></textarea>
+      <p className="h4 text-center mb-4">Get in Touch!</p>
+      <label htmlFor="defaultFormContactNameEx" className="grey-text">
+        Your name
+      </label>
+      <input
+        type="text"
+        id="defaultFormContactNameEx"
+        className="form-control"
+      />
+      <br />
+      <label htmlFor="defaultFormContactEmailEx" className="grey-text">
+        Your email
+      </label>
+      <input
+        type="email"
+        id="defaultFormContactEmailEx"
+        className="form-control"
+      />
+      <br />
+      <label
+        htmlFor="defaultFormContactSubjectEx"
+        className="grey-text"
+      >
+        Subject
+      </label>
+      <input
+        type="text"
+        id="defaultFormContactSubjectEx"
+        className="form-control"
+      />
+      <br />
+      <label
+        htmlFor="defaultFormContactMessageEx"
+        className="grey-text"
+      >
+        Your message
+      </label>
+      <textarea
+        type="text"
+        id="defaultFormContactMessageEx"
+        className="form-control"
+        rows="3"
+      />
+      <div className="text-center mt-4">
+        <MDBBtn color="pink" type="submit">
+          Send
+          <MDBIcon icon="paper-plane" className="ml-2" />
+        </MDBBtn>
+      </div>
     </form>
     <div id="root">
       
