--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,8 @@
         id="defaultFormContactMessageEx"
         className="form-control"
         rows="3"
-      />
+      >
+      </textarea>
       <div className="text-center mt-4">
         <MDBBtn color="pink" type="submit">
           Send
@@ -103,6 +104,7 @@
         </MDBBtn>
       </div>
     </form>
+
     <div id="root">
       
     </div>
