--- a/public/index.html
+++ b/public/index.html
@@ -54,55 +54,61 @@
 
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <p className="h4 text-center mb-4">Get in Touch!</p>
-      <label htmlFor="defaultFormContactNameEx" className="grey-text">
-        Your name
-      </label>
-      <input
-        type="text"
-        id="defaultFormContactNameEx"
-        className="form-control"
-      />
-      <br />
-      <label htmlFor="defaultFormContactEmailEx" className="grey-text">
-        Your email
-      </label>
-      <input
-        type="email"
-        id="defaultFormContactEmailEx"
-        className="form-control"
-      />
-      <br />
-      <label
-        htmlFor="defaultFormContactSubjectEx"
-        className="grey-text"
-      >
-        Subject
-      </label>
-      <input
-        type="text"
-        id="defaultFormContactSubjectEx"
-        className="form-control"
-      />
-      <br />
-      <label
-        htmlFor="defaultFormContactMessageEx"
-        className="grey-text"
-      >
-        Your message
-      </label>
-      <textarea
-        type="text"
-        id="defaultFormContactMessageEx"
-        className="form-control"
-        rows="3"
-      >
-      </textarea>
-      <div className="text-center mt-4">
-        <MDBBtn color="pink" type="submit">
-          Send
-          <MDBIcon icon="paper-plane" className="ml-2" />
-        </MDBBtn>
-      </div>
+                  <label htmlFor="defaultFormContactNameEx" className="grey-text">
+                    Name <span className="pink-text">*</span>
+                  </label>
+                  <input
+                    type="text"
+                    id="defaultFormContactNameEx"
+                    className="form-control"
+                    name="name"
+                    required
+                  />
+                  <br />
+                  <label htmlFor="defaultFormContactEmailEx" className="grey-text">
+                    Email <span className="pink-text">*</span>
+                  </label>
+                  <input
+                    type="email"
+                    id="defaultFormContactEmailEx"
+                    className="form-control"
+                    name="email"
+                    required
+                  />
+                  <br />
+                  <label
+                    htmlFor="defaultFormContactSubjectEx"
+                    className="grey-text"
+                  >
+                    Subject
+                  </label>
+                  <input
+                    type="text"
+                    id="defaultFormContactSubjectEx"
+                    className="form-control"
+                    name="subject"
+                  />
+                  <br />
+                  <label
+                    htmlFor="defaultFormContactMessageEx"
+                    className="grey-text"
+                  >
+                    Message <span className="pink-text">*</span>
+                  </label>
+                  <textarea
+                    type="text"
+                    id="defaultFormContactMessageEx"
+                    className="form-control"
+                    rows="5"
+                    name="message"
+                    required
+                  />
+                  <div className="text-center mt-4">
+                    <MDBBtn color="pink" type="submit">
+                      Send
+                      <MDBIcon icon="paper-plane" className="ml-2" />
+                    </MDBBtn>
+                  </div>
     </form>
 
     <div id="root">
