--- a/public/index.html
+++ b/public/index.html
@@ -102,13 +102,9 @@
                     rows="5"
                     name="message"
                     required
-                  />
-                  <div className="text-center mt-4">
-                    <MDBBtn color="pink" type="submit">
-                      Send
-                      <MDBIcon icon="paper-plane" className="ml-2" />
-                    </MDBBtn>
-                  </div>
+                  >
+                  </textarea>
+   
     </form>
 
     <div id="root">
