--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,9 @@
                     required
                   >
                   </textarea>
-   
+                  <div className="text-center mt-4">
+                    <button className="pink" type="submit">SEND</button>
+                  </div>
     </form>
 
     <div id="root">
