--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+
+    <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <p className="h4 text-center mb-4">Get in Touch!</p>
                   <label htmlFor="defaultFormContactNameEx" className="grey-text">
                     Name <span className="pink-text">*</span>
@@ -107,7 +113,7 @@
                   <div className="text-center mt-4">
                     <button className="pink" type="submit">SEND</button>
                   </div>
-    </form>
+    </form> -->
 
     <div id="root">
       
