--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,17 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name"/>
+      <input type="email" name="email"/>
+      <select type="text" name="subject"></select>
+      <textarea type="text" name="message"></textarea>
+      </form>
+
+    <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
-    </form>
+    </form> -->
 
     <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <p className="h4 text-center mb-4">Get in Touch!</p>
