--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name"/>
       <input type="email" name="email"/>
-      <select type="text" name="subject"></select>
+      <!-- <select type="text" name="subject"></select> -->
       <textarea type="text" name="message"></textarea>
     </form>
 
@@ -66,7 +66,7 @@
       <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form> 
-    
+
     -->
 
 
