--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       <input type="text" name="name"/>
       <input type="email" name="email"/>
       <!-- <select type="text" name="subject"></select> -->
-      <textarea type="text" name="message"></textarea>
+      <!-- <textarea type="text" name="message"></textarea> -->
     </form>
 
     <!-- 
