--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,14 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name"/>
       <input type="email" name="email"/>
-      <!-- <select type="text" name="subject"></select> -->
-      <!-- <textarea type="text" name="message"></textarea> -->
-    </form>
+      <select type="text" name="subject"></select>
+      <textarea type="text" name="message"></textarea>
+    </form> -->
 
-    <!-- 
+    
     
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
@@ -67,7 +67,7 @@
       <textarea name="message"></textarea>
     </form> 
 
-    -->
+   
 
 
     <div id="root">
